After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719711 - shell: Assert when the panel is empty
shell: Assert when the panel is empty
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: shell
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-12-02 18:15 UTC by Bastien Nocera
Modified: 2013-12-06 11:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell: Assert when the panel is empty (1.14 KB, patch)
2013-12-02 18:16 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-12-02 18:15:50 UTC
.
Comment 1 Bastien Nocera 2013-12-02 18:16:03 UTC
Created attachment 263321 [details] [review]
shell: Assert when the panel is empty

Rather than getting a segfault.
Comment 2 Bastien Nocera 2013-12-06 11:04:19 UTC
Attachment 263321 [details] pushed as ce0387d - shell: Assert when the panel is empty