shell: Assert when the panel is empty

Rather than getting a segfault.

https://bugzilla.gnome.org/show_bug.cgi?id=719711